@startuml 订单管理

class TradeAggregate {
    - tradeId: TradeId
    - address: Address
    - buyerId: UserId
    - orders: Collection
}
class OrderAggregate {
    - orderId: OrderId
    - tradeId: TradeId
    - orderNo: String
    - orderItems: Collection
    - state: SwitchState
}
class OrderItemAggregate {
    - itemId: OrderItemId
    - orderId: OrderId
    - state: SwitchState
}
class PaymentAggregate {
    - paymentId: PaymentId
    - orderId: OrderId
    - payNo: String
}

TradeAggregate "1"--*"*" OrderAggregate
OrderAggregate "1"--*"*" OrderItemAggregate
OrderAggregate "1"--*"*" PaymentAggregate

@enduml